Aligning fix

--- a/default.css
+++ b/default.css
@@ -8,8 +8,6 @@ img.centersize {
     display: block;
     margin: 0 auto;
 }
-li {
-	display: inline;
 }
 div.navlinks {
 	margin: 0 0;
